# genesis

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: text.frag  text.vert
engine/inc/: engine.hpp
engine/inc/animation/: animator.hpp
engine/inc/core/: application.hpp  time.hpp
engine/inc/ecs/: component.hpp  entity.hpp
engine/inc/graphics/: camera.hpp  font.hpp  shader.hpp
engine/inc/physics/: collider.hpp  physicsSystem.hpp  rigidbody.hpp
engine/inc/render/: renderSystem.hpp
engine/inc/resource/: loader.hpp
engine/inc/ui/: lable.hpp
engine/inc/window_manager/: window.h
engine/src/: engine.cpp
engine/src/core/: application.cpp  time.cpp
engine/src/input/: inputManager.cpp
engine/src/render/: renderSystem.cpp
engine/src/resource/: resourceManager.cpp
engine/src/window_manager/: window.cpp
game/: main.cpp
include/WindowManager/: Window.h
include/animation/: animationSystem.hpp  animator.hpp  spriteSheet.hpp
include/core/: application.hpp  time.hpp  window.hpp
include/ecs/: component.hpp  registry.hpp
include/game/: entity.hpp  game.hpp  player.hpp
include/glad/include/glad/: glad.h
include/graphics/: camera.hpp  font.hpp  mesh.hpp  shader.hpp  spriteSheet.hpp  texture.hpp
include/input/: inputManager.hpp
include/physics/: collider.hpp  force.hpp  physicsSystem.hpp  rigidbody.hpp
include/resource/: resourceManager.hpp
include/ui/: button.hpp  uiSystem.hpp
script/: test_window.sh
script/run/: run_game.sh
script/test/: test_window.sh
src/: glad.c  main.cpp
src/WindowManager/: Window.cpp  main.cpp
src/animation/: animationSystem.cpp
src/core/: application.cpp  window.cpp
src/ecs/: component.cpp
src/game/: entity.cpp  game.cpp  player.cpp
src/graphics/: camera.cpp  font.cpp  mesh.cpp  shader.cpp  texture.cpp
src/input/: inputManager.cpp
src/resource/: loader.cpp
test/: window.cpp
